//
// Licensed to the Apache Software Foundation (ASF) under one or more
// contributor license agreements.  See the NOTICE file distributed with
// this work for additional information regarding copyright ownership.
// The ASF licenses this file to You under the Apache License, Version 2.0
// (the "License"); you may not use this file except in compliance with
// the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// $schema: dubbo.networking.v1alpha3.DestinationRule
// $title: Destination Rule

package dubbo.networking.v1alpha3;

import "google/api/field_behavior.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
import "networking/v1alpha3/virtual_service.proto";

option go_package = "/api/networking/v1alpha3";

//
// <!-- go code generation tags
// +kubetype-gen
// +kubetype-gen:groupVersion=networking.dubbo.apache.org/v1alpha3
// +genclient
// +k8s:deepcopy-gen=true
// -->
message DestinationRule {
  string host = 1 [(google.api.field_behavior) = REQUIRED];
  TrafficPolicy traffic_policy = 2;
  repeated Subset subsets = 3;
  repeated string export_to = 4;
}

message TrafficPolicy {
  ClientTLSSettings tls = 4;
}

message Subset {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  map<string, string> labels = 2;
  TrafficPolicy traffic_policy = 3;
}

message ClientTLSSettings {
  enum TLSmode {
    DISABLE = 0;
    // TODO Not yet implemented
    MUTUAL = 1;
    DUBBO_MUTUAL = 2;
  }
  TLSmode mode = 1;
}


